--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Marquess' Home on Github</title>
-  </head>
-  <nav>
-  </nav>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Marquess Valdez</h1>
-        <p class="view"><a href="https://github.com/MarquessV">View My GitHub Profile</a></p>
+<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="style.css">
+<head>
+  <title>Marquess Valdez</title>
+</head>
+<body>
+<header>
+  <img src="resources/profile.png" alt="Marquess on a rock on a bigger rock called Iron Mountain" width="250px" height="250px" style="padding-top:10px">
+  <h1>Marquess Valdez</h1>
+  <h2>Code &middot; Math &middot; Music</h2>
+  <h3>
+    <a href="https://github.com/MarquessV"><img src="resources/GitHub-32px.png" alt="MarquessV on GitHub" width ="32" height="32"></a>
+    <a href="https://twitter.com/MarquessV_"><img src="resources/twitter-32px.png" alt="@MarquessV_ on Twitter" width ="32" height="32"></a>
+  </h3>
+</header>
 
-      </header>
+<section>
+  <header>
+    <h1>
+      
+    </h1>
+  </header>
+</section>
+<footer>
+  <p>Hosted on GitHub Pages</p>
+</footer>
 
-      <footer>
-        <p><small>Hosted on GitHub Pages</small></p>
-      </footer>
-    </div>    
-  </body>
+</body>
 </html>
+
