--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="style.css">
 <head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="chrome=1">
   <title>Marquess Valdez</title>
 </head>
 <body>
