Added .blue-border class for profile image
I could do exactly what I did editing my profile in Gimp by adding a
simple class to my CSS!

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Marquess Valdez</title>
 </head>
 <body>
-<header>
-  <img src="resources/profile.png" alt="Marquess on a rock on a bigger rock called Iron Mountain" width="250px" height="250px" style="padding-top:10px">
+<header style="padding-top:10px">
+  <img class="blue-border" src="resources/profile.jpg" alt="Marquess on a rock on a bigger rock called Iron Mountain" width="250px" height="250px">
   <h1>Marquess Valdez</h1>
   <h2>Code &middot; Math &middot; Music</h2>
   <h3>
