Rewrite for FreeCodeCamp portfolio project
Rewrote using bootstrap to fulfill all the requirements of the "Build a
Personal Portfolio Webpage" project on FreeCodeCamp.

--- a/index.html
+++ b/index.html
@@ -1,34 +1,78 @@
 <!DOCTYPE html>
 <html>
 <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="style.css">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <title>Marquess Valdez</title>
 </head>
-<body>
-<header style="padding-top:10px">
+
+<div style="background-color: #FFFFFF">
+
+<div class="navbar-fixed-top" style="box-shadow: 0 0 5px black; background-color:#004358">
+    <div class="navbar-header">
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </div>
+</div>
+
+<div class="container center-block" style="background-color:#FBFAF8; box-shadow: 0 0 5px black">
+
+
+<div class="row">
+
+<header style="padding-top:40px">
   <img class="blue-border" src="resources/profile.jpg" alt="Marquess on a rock on a bigger rock called Iron Mountain" width="250px" height="250px">
-  <h1>Marquess Valdez</h1>
+  <h1 style="font-size:150%; padding-bottom:10px">Marquess Valdez</h1>
   <h2>Code &middot; Math &middot; Music</h2>
   <h3>
     <a href="https://github.com/MarquessV"><img src="resources/GitHub-32px.png" alt="MarquessV on GitHub" width ="32" height="32"></a>
     <a href="https://twitter.com/MarquessV_"><img src="resources/twitter-32px.png" alt="@MarquessV_ on Twitter" width ="32" height="32"></a>
+    <a href="mailto:marquessavaldez@gmail.com"><img src="resources/mail.png" alt="Email Me" width ="32" height="32"></a>
   </h3>
 </header>
 
 <section>
   <header>
-    <h1>
-      
-    </h1>
+    <h1 id="about">About</h1>
   </header>
+  <article>
+    I'm a student passionate about developing something that makes a difference in the world. Outside of math and software, I am a fitness enthusiast and electronic music producer.
+  </article>
+<section>
+  <header>
+    <h1 id="projects">Projects</h1>
+  </header>
+  <article>
+    <a href="https://codepen.io/Marquess/full/aNgVBw/"><img src="resources/prince-tribute-thumb.jpeg" class="img-responsive blue-border center-block" style="height:200px" alt="Prince Tribute Page"></a>
+  </article>
 </section>
+
+<section>
+  <header>
+    <h1 id="contact">Contact</h1>
+  </header>
+  <article>
+    The best way to contact me is via my email or my Twitter!
+  </article>
+</section>
+
+
+
+</div>
+
+
+
+</div>
+
 <footer>
-  <p>Hosted on GitHub Pages</p>
+  <p>Designed and written by Marquess Valdez</p>
 </footer>
 
-</body>
-</html>
+</div>
 
+</html>
