--- a/index.html
+++ b/index.html
@@ -41,14 +41,18 @@
     <h1 id="about">About</h1>
   </header>
   <article>
+  <p>
     I'm a student passionate about developing something that makes a difference in the world. Outside of math and software, I am a fitness enthusiast and electronic music producer.
+  </p>
   </article>
 <section>
   <header>
     <h1 id="projects">Projects</h1>
   </header>
   <article>
+  <p>
     <a href="https://codepen.io/Marquess/full/aNgVBw/"><img src="resources/prince-tribute-thumb.jpeg" class="img-responsive blue-border center-block" style="height:200px" alt="Prince Tribute Page"></a>
+  </p>
   </article>
 </section>
 
@@ -57,7 +61,9 @@
     <h1 id="contact">Contact</h1>
   </header>
   <article>
-    The best way to contact me is via my email or my Twitter!
+    <p>I am currently based in San Diego, CA.</p>
+
+    <p>The best way to contact me is via my email or my Twitter!</p>
   </article>
 </section>
 
@@ -70,7 +76,7 @@
 </div>
 
 <footer>
-  <p>Designed and written by Marquess Valdez</p>
+  <p>Made by Marquess Valdez</p>
 </footer>
 
 </div>
