Added PHP-Tip-Calc too projects, changed bootstrap classes to hopefully work better on mobile phones

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
   </h3>
 </header>
 
-<section>
-  <header>
+  <header class="col-xs-12 col-md-; section-header">
     <h1 id="about">About</h1>
   </header>
   <article>
@@ -46,27 +45,25 @@
     I'm a student passionate about developing something that makes a difference in the world. Outside of math and software, I am a fitness enthusiast and electronic music producer.
   </p>
   </article>
-<section>
-  <header>
+
+  <header class="col-xs-12 col-md-8; section-header">
     <h1 id="projects">Projects</h1>
   </header>
   <article>
-  <p>
-    <a href="https://codepen.io/Marquess/full/aNgVBw/"><img src="resources/prince-tribute-thumb.jpeg" class="img-responsive blue-border center-block" style="height:200px" alt="Prince Tribute Page"></a>
+  <p style="padding-top:40px">
+    <a href="https://github.com/MarquessV/PHP-Tip-Calc"><img src="http://i.imgur.com/LhGYoPf.gif" class="img-responsive blue-border center-block" style="height:200px" alt="PHP Tip Calculator"></a>
   </p>
   </article>
-</section>
 
-<section>
-  <header>
+  <header class="col-xs-12 col-md-8; section-header">
     <h1 id="contact">Contact</h1>
   </header>
   <article>
-    <p>I am currently based in San Diego, CA.</p>
-
-    <p>The best way to contact me is via my email or my Twitter!</p>
+          <p style="padding-top:40px">
+            I am currently based in San Diego, CA.
+            The best way to contact me is via my email! (marquessavaldez@gmail.com)
+          </p>
   </article>
-</section>
 
 
 
