--- a/index.html
+++ b/index.html
@@ -1,82 +1,53 @@
-<!DOCTYPE html>
 <html>
-<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="style.css">
-<link rel="icon" href="resources/favicon.ico">
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="chrome=1">
   <title>Marquess Valdez</title>
+  <meta name="description" content="Marquess Valdez, San Francisco Bay Area Developer."/>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+  <script src="https://use.fontawesome.com/f78a0bee35.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inconsolata" />
+  <link href="style.css" rel="stylesheet"/>
+  <script type='text/javascript' src='js/contents.js'></script>
 </head>
 
-<div style="background-color: #FFFFFF">
-
-<div class="navbar-fixed-top" style="box-shadow: 0 0 5px black; background-color:#004358">
-    <div class="navbar-header">
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
+<body>
+  <div class="container">
+  <h1>Marquess Valdez</h1>
+  <h2>San Francisco Bay Area Software Engineer</h2>
+    <div class = "links">
+      <a href="http://github.com/MarquessV"><i class="fa fa-github"></i> GitHub</a>
+      <a href="http://twitter.com/marquessv_"><i class="fa fa-twitter"></i> Twitter</a>
+      <a href="http://linkedin.com/in/marquessv"><i class="fa fa-linkedin"></i> LinkedIn</a>
+      <a href="mailto:marquessavaldez@gmail.com"><i class="fa fa-envelope"></i> Email</a>
     </div>
-</div>
+    <div class = "intro">
+      I am a newly graduated developer looking for work in the SF Bay Area. In particular, I have a passion for building the groundwork for things everyone needs...
+    </div>
 
-<div class="container center-block" style="background-color:#FBFAF8; box-shadow: 0 0 5px black">
+    <div class = "timeline">
+      <div class = "title">Timeline</div> 
+      Here are some of the things I've been doing.
+      <div class = "exp">
+        <div class = "loading">Loading...</div>
+        <ul id="highlights">
+        </ul>
+        For more specific details check my <a href="http://linkedin.com/in/marquessv/">LinkedIn</a> or request my resume via <a href="mailto:marquessavaldez@gmail.com">email</a>.
+      </div>
+    </div>
 
+    <div class="projects">
+      <div class="title">Projects</div>
+      Here are some of the projects I've worked on. You can see more on my <a href="https://github.com/marquessv/">GitHub</a>.
+      <div class="exp">
+        <div class="loading">Loading...</div>
+        <ul id="press">
+        </ul>
+      </div>
+    </div>
 
-<div class="row">
-
-<header style="padding-top:40px">
-  <img class="blue-border" src="resources/profile.jpg" alt="Marquess on a rock on a bigger rock called Iron Mountain" width="250px" height="250px">
-  <h1 style="font-size:150%; padding-bottom:10px">Marquess Valdez</h1>
-  <h2>Code &middot; Math &middot; Music</h2>
-  <h3>
-    <a href="https://github.com/MarquessV"><img src="resources/GitHub-32px.png" alt="MarquessV on GitHub" width ="32" height="32"></a>
-    <a href="https://twitter.com/MarquessV_"><img src="resources/twitter-32px.png" alt="@MarquessV_ on Twitter" width ="32" height="32"></a>
-    <a href="mailto:marquessavaldez@gmail.com"><img src="resources/mail.png" alt="Email Me" width ="32" height="32"></a>
-  </h3>
-</header>
-
-  <header class="col-xs-12 col-md-; section-header">
-    <h1 id="about">About</h1>
-  </header>
-  <article>
-  <p>
-    I'm a student passionate about developing something that makes a difference in the world. Outside of math and software, I am a fitness enthusiast and electronic music producer.
-  </p>
-  </article>
-
-  <header class="col-xs-12 col-md-8; section-header">
-    <h1 id="projects">Projects</h1>
-  </header>
-  <article>
-  <p style="padding-top:40px">
-    <a href="https://github.com/MarquessV/PHP-Tip-Calc"><img src="http://i.imgur.com/LhGYoPf.gif" class="img-responsive blue-border center-block" style="height:200px" alt="PHP Tip Calculator"></a>
-  </p>
-  </article>
-
-  <header class="col-xs-12 col-md-8; section-header">
-    <h1 id="contact">Contact</h1>
-  </header>
-  <article>
-          <p style="padding-top:40px">
-            I am currently based in San Diego, CA.
-            The best way to contact me is via my email! (marquessavaldez@gmail.com)
-          </p>
-  </article>
-
-
-
-</div>
-
-
-
-</div>
-
-<footer>
-  <p>Made by Marquess Valdez</p>
-</footer>
-
-</div>
+  </div>
+</body>
 
 </html>
