--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+  <link rel="icon" type="image/png" href="/resources/favicon.png" sizes="32x32">
+
   <script src="https://use.fontawesome.com/f78a0bee35.js"></script>
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inconsolata" />
   <link href="style.css" rel="stylesheet"/>
