Changed wording, added interests section

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
       <a href="mailto:marquessavaldez@gmail.com"><i class="fa fa-envelope"></i> Email</a>
     </div>
     <div class = "intro">
-      I am a newly graduated developer looking for work in the SF Bay Area. In particular, I have a passion for building the groundwork for things everyone needs...
+      I am a newly graduated developer looking for work in the SF Bay Area. My computer science, math, and IT background made me passionate about finding fast and elegant solutions to problems and presenting those solutions in a way that any user can understand.
     </div>
 
     <div class = "timeline">
       <div class = "title">Timeline</div> 
-      Here are some of the things I've been doing.
+      A quick summary of some of the things I've been up to.
       <div class = "exp">
         <div class = "loading">Loading...</div>
         <ul id="highlights">
@@ -41,10 +41,22 @@
 
     <div class="projects">
       <div class="title">Projects</div>
-      Here are some of the projects I've worked on. You can see more on my <a href="https://github.com/marquessv/">GitHub</a>.
+      Some of the projects I've worked on. You can see more on my <a href="https://github.com/marquessv/">GitHub</a>.
       <div class="exp">
         <div class="loading">Loading...</div>
         <ul id="press">
+        </ul>
+      </div>
+    </div>
+
+    <div class="interests">
+      <div class="title">Interests</div>
+      Somehow, I make time for hobbies outside of tech.
+      <div class = "exp">
+        <ul>
+          <li><i class="fa fa-heartbeat"></i> Fitness. My proudest accomplishment so far is <em>deadlifting 400lbs</em>.</li>
+          <li><i class="fa fa-tree"></i> Nature. I recently camped in <em>Glacier National Park</em> for a week and highly recommend it!
+          <li><i class="fa fa-music"></i> Music. <a href="https://soundcloud.com/thedmnofficial/nervo-ft-timmy-trumpet-anywhere-you-go-dmn-remix">Here</a> is a remix I wrote with my friends.</li>
         </ul>
       </div>
     </div>
