Removed dead twitter link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <h2>San Francisco Bay Area Software Engineer</h2>
     <div class = "links">
       <a href="http://github.com/MarquessV"><i class="fa fa-github"></i> GitHub</a>
-      <a href="http://twitter.com/marquessv_"><i class="fa fa-twitter"></i> Twitter</a>
+      <!--<a href="http://twitter.com/marquessv_"><i class="fa fa-twitter"></i> Twitter</a>-->
       <a href="http://linkedin.com/in/marquessv"><i class="fa fa-linkedin"></i> LinkedIn</a>
       <a href="mailto:marquessavaldez@gmail.com"><i class="fa fa-envelope"></i> Email</a>
     </div>
